Fix sheets z-index

--- a/src/components/Sheets/sheets.css
+++ b/src/components/Sheets/sheets.css
@@ -16,11 +16,11 @@
 }
 
 .sheets-container--open {
-  /* z-index: 0; */
+  z-index: 2;
 }
 
 .sheets-backdrop {
-  z-index: 2;
+  z-index: -1;
 }
 
 @media (min-width: 1000px) {
